# build-hackathon

./: .gitignore  README.md  pre_commit_script.py  pyproject.toml  rxconfig.py  submission
backend/: __init__.py  db.py  file_to_metrics.py  template.txt
backend/test_parsing/: Q1_2025_Metrics.xlsx  example1.txt  example2.txt  example3.txt  structured.txt  test_parsing.py
commons/: __init__.py
frontend/: frontend.py
src/backend/: __init__.py  api.py  db.py  file_to_metrics.py
src/backend/test_parsing/: test_parsing.py
src/backend/test_parsing/outputs/: example1_output.json  example2_output.json  example3_output.json
src/commons/: __init__.py
